src/objects/CH_Workgroup_Business_Hours_Association__c.object
<CustomObject>
    <fields>
        <fullName>CH_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>CH_Workgroup_Business_Hours_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Duplicate_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Duplicate Check</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <label>Workgroup</label>
        <referenceTo>CH_Workgroup__c</referenceTo>
        <relationshipLabel>Workgroup Business Hours Associations</relationshipLabel>
        <relationshipName>CH_Workgroup_Business_Hours_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workgroup Business Hours Association</label>
    <nameField>
        <displayFormat>WGBH-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workgroup Business Hours Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>